--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,28 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🚀 Floopy Network is now out! Enjoy the best unblocked games on the internet! 🥳 <i>[v0.1]</i></p>
+        <p class="updatetext">🚀 The second update is out! 10 NEW Games added and improvements! 💻 <i>[v0.2]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.1 - <span style="color: yellow">5/26/2024</span> - FIRST RELEASE</h1>
+        <h1>release v0.2 - <span style="color: yellow">5/28/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Fixed the bug where the elements collide when launching a game.</li>
+            <li>Free Web ➡ Floopy Web</li>
+            <li>Floopy Web is now working (please note that it is in beta and the servers are slow and it has not been tested on Chromebooks. Recommended for use in version v0.3)</li>
+            <li>Added 4 Geometry Dash Games</li>
+            <li>Added Basketball Stars</li>
+            <li>Added Basket Random</li>
+            <li>Added Basketball Legends</li>
+            <li>Added OvO</li>
+            <li>Added Eggy Car</li>
+            <li>Added Cookie Clicker</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.1 - <span style="color: yellow">5/26/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>This is the first release, new updates will go here.</li>
         </ul>
@@ -35,7 +51,7 @@
         <a onclick="injectHome()"><button class="homebtn"><img src="img/home.png" alt="Home"></button></a>
         <a onclick="injectGames()"><button class="gamebtn"><img src="img/game.png" alt="Games"></button></a>
         <a onclick="injectApps()"><button class="appsbtn"><img src="img/apps.png" alt="Apps"></button></a>
-        <a onclick="injectFreeweb()"><button class="freewebbtn"><img src="img/freeweb.png" alt="Free Web"></button></a>
+        <a onclick="injectfloopyweb()"><button class="floopywebbtn"><img src="img/floopyweb.png" alt="floopy Web"></button></a>
         <button class="morebtn"><img src="img/more.png" alt="More"></button>
     </div>
     <div class="star"></div>
