--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🚀 Floopy Network is now out! Enjoy the best unblocked games on the internet! 🥳 <i>[v0.1]</i></p>
+        <p class="updatetext">🚀 The second update is out! 10 NEW Games added and improvements! 💻 <i>[v0.2]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -62,12 +62,12 @@
     <h2 class="rainbow-text">Unblocked News</h2>
 
     <center>
-        <p style="font-size: larger; font-weight: bold;"><span style="color: yellow;">5/26/2024</span> News | Floopy Network is trying to find a working proxy server for Floopy Web. Floopy Web servers are currently down. Floopy Web is a in-built web browser on Floopy Network. You can search things without restrictions, and you can paste in links and Floopy Web will unblock it.</p>
+        <p style="font-size: larger; font-weight: bold;"><span style="color: yellow;">5/27/2024</span> News | Floopy Web is working, but the servers are slow. Floopy Network is thinking about partnering with <span style="color:deepskyblue">Shark Networks</span> and Floopy Network has just announced there might be a Floopy Phone feature in v0.6 or v0.5 where you can use a phone directly in your browser.</p>
     </center>
 
     <h2 class="rainbow-text">What is coming next on Floopy Network?</h2>
     <center>
-        <p style="font-size: larger; font-weight: bold;">Servers for Floopy Web will be back up and there will be a search bar for games and you could filter games by category.</p>
+        <p style="font-size: larger; font-weight: bold;">There will be a search bar for games and you could filter games by category. In v0.5 or v0.6, there will be a Floopy Phone option where you can open a phone directly in your browser.</p>
     <center>
 
     
@@ -77,7 +77,7 @@
         <a onclick="injectHome()"><button class="homebtn"><img src="img/home.png" alt="Home"></button></a>
         <a onclick="injectGames()"><button class="gamebtn"><img src="img/game.png" alt="Games"></button></a>
         <a onclick="injectApps()"><button class="appsbtn"><img src="img/apps.png" alt="Apps"></button></a>
-        <a onclick="injectFreeweb()"><button class="freewebbtn"><img src="img/freeweb.png" alt="Free Web"></button></a>
+        <a onclick="injectfloopyweb()"><button class="floopywebbtn"><img src="img/floopyweb.png" alt="floopy Web"></button></a>
         <button class="morebtn"><img src="img/more.png" alt="More"></button>
     </div>
     <div class="star"></div>
