--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
         <a onclick="injectHome()"><button class="homebtn"><img src="img/home.png" alt="Home"></button></a>
         <a onclick="injectGames()"><button class="gamebtn"><img src="img/game.png" alt="Games"></button></a>
         <a onclick="injectApps()"><button class="appsbtn"><img src="img/apps.png" alt="Apps"></button></a>
-        <a onclick="injectFreeweb()"><button class="freewebbtn"><img src="img/freeweb.png" alt="Free Web"></button></a>
+        <a onclick="injectfloopyweb()"><button class="floopywebbtn"><img src="img/floopyweb.png" alt="floopy Web"></button></a>
         <button class="morebtn"><img src="img/more.png" alt="More"></button>
     </div>
 </body>
