--- a/home.html
+++ b/home.html
@@ -12,11 +12,14 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🚀 The second update is out! 10 NEW Games added and improvements! 💻 <i>[v0.2]</i></p>
+        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to Floopy Network.</p>
+
+    <h2 style="color: deepskyblue; text-align: center;">We are now partnered with Shark Networks!</h2>
+
     <center><img src="img/logo.jpg" alt="Logo" class="logo"></center>
     <h2 class="rainbow-text">Top 5 Games</h2>
     <center>
@@ -56,18 +59,18 @@
 
     <h2 class="rainbow-text">What is Floopy Network?</h2>
     <center>
-        <p style="font-size: larger; font-weight: bold;">Floopy Network is a network of websites that are unblocked and are safe to use. Floopy Network is a project by a dumb 12 year old who is bored. The goal of Floopy Network is to help kids be entertained during class and actually have something fun to do.</p>
+        <p style="font-size: larger; font-weight: bold;" class="substitute">Floopy Network is a network of websites that are unblocked and are safe to use. Floopy Network is a project by a dumb 12 year old who is bored. The goal of Floopy Network is to help kids be entertained during class and actually have something fun to do.</p>
     <center>
 
     <h2 class="rainbow-text">Unblocked News</h2>
 
     <center>
-        <p style="font-size: larger; font-weight: bold;"><span style="color: yellow;">5/27/2024</span> News | Floopy Web is working, but the servers are slow. Floopy Network is thinking about partnering with <span style="color:deepskyblue">Shark Networks</span> and Floopy Network has just announced there might be a Floopy Phone feature in v0.6 or v0.5 where you can use a phone directly in your browser.</p>
+        <p style="font-size: larger; font-weight: bold;" class="substitute"><span style="color: yellow;">5/28/2024</span> News | Floopy Network has announced that the Floopy Phone feature, the feature where you could directly open a phone in your browser is coming in v0.5, v0.5 is estimated that it will release on Friday, May 30th. Floopy Network has made the decision that they will partner with <span style="color: deepskyblue">Shark Networks</span>.</p>
     </center>
 
     <h2 class="rainbow-text">What is coming next on Floopy Network?</h2>
     <center>
-        <p style="font-size: larger; font-weight: bold;">There will be a search bar for games and you could filter games by category. In v0.5 or v0.6, there will be a Floopy Phone option where you can open a phone directly in your browser.</p>
+        <p style="font-size: larger; font-weight: bold;" class="substitute">There will be a search bar for games and you could filter games by category. In v0.5, there will be a Floopy Phone option where you can open a phone directly in your browser.</p>
     <center>
 
     
