--- a/unblockedwebsites.html
+++ b/unblockedwebsites.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🚀 The second update is out! 10 NEW Games added and improvements! 💻 <i>[v0.2]</i></p>
+        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -52,14 +52,14 @@
 
     <div class="gamediv">
         <a href="https://sites.google.com/view/classroom66">
-            <button class="choicegamebtn"><img src="https://lh3.googleusercontent.com/pZdsK1PU3uKuYZ3I_-CVKiU_qA78d8ClCLY2Ahg592drMrYpnAstIfMv2rmsdqbrzTUiwSA-skqAvKcEO-Oifuw=w16383" alt="Unblocked" width="150" height="150"></button>
+            <button class="choicegamebtn"><img src="https://lh4.googleusercontent.com/QEA_zNO2JJTxm0esH7_MQ9egO8WCVqnd6C1r5mtbatYBLYy4iCD4_21WCNgwNYQPqCeSIkFsT2inwOP6O_p24VQ=w16383" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Classroom 6X</p>
         </a>
     </div>
 
     <div class="gamediv">
         <a href="https://sites.google.com/lcps.org/opal-networks-usa/opal-network">
-            <button class="choicegamebtn"><img src="https://lh3.googleusercontent.com/Hh1h5_1I2OQXkf6xDRNRDQGtK52AEE2RIOrgK6GMRDRjfcBiubeLOc0yLfm9PreKI3XUChw4rVTAjLUt5UvIEH3mOR6SoMhhvh_ccsCfsTmH9HOfShthnmiEXgMIbKVH9w=w1280" alt="Unblocked" width="150" height="150"></button>
+            <button class="choicegamebtn"><img src="https://lh5.googleusercontent.com/R20I-kT8HFIwK-VfbeXYIN3kQJUMnt1J6DTDAG36w8JOVZjUNBK5L4YAHkzWBwcCnMFuD0PsDA3ypSLS2c9u69Q3d0fCiq-tAvdbQ7_Kuxh_-K5XESJAcLRj8yPIo3BQ7Q=w1280" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Opal Networks</p>
         </a>
     </div>
@@ -423,21 +423,21 @@
 
     <div class="gamediv">
         <a href="https://sites.google.com/view/ulius">
-            <button class="choicegamebtn"><img src="https://lh4.googleusercontent.com/ExG_npO5Dv9fIPKukScc-jOhOLVpNBvbZCB3B5TnpI0vUnyEnC8SFII9OAgPnOXGqiqt5IuHdjecI0od-bZ4H0U=w16383" alt="Unblocked" width="150" height="150"></button>
+            <button class="choicegamebtn"><img src="https://lh3.googleusercontent.com/Bcyj1imdXQUoAZYPQUcTmywA-ZDUH8BoA40yF4BG41BsHS5IpmQy7kMoE9433JhZISRiOXmI2LD-M65f115XfCY=w16383" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Ulius (Olius)</p>
         </a>
     </div>
 
     <div class="gamediv">
         <a href="https://sites.google.com/view/ilius">
-            <button class="choicegamebtn"><img src="https://lh4.googleusercontent.com/ExG_npO5Dv9fIPKukScc-jOhOLVpNBvbZCB3B5TnpI0vUnyEnC8SFII9OAgPnOXGqiqt5IuHdjecI0od-bZ4H0U=w16383" alt="Unblocked" width="150" height="150"></button>
+            <button class="choicegamebtn"><img src="https://lh3.googleusercontent.com/Bcyj1imdXQUoAZYPQUcTmywA-ZDUH8BoA40yF4BG41BsHS5IpmQy7kMoE9433JhZISRiOXmI2LD-M65f115XfCY=w16383" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Ilius (Olius)</p>
         </a>
     </div>
 
     <div class="gamediv">
         <a href="https://sites.google.com/view/home-desk/home?authuser=0">
-            <button class="choicegamebtn"><img src="https://lh3.googleusercontent.com/9miLPjh7e9AB4y3kmGZf4JoJEx_MBbIIn9YLaAA0xCzUBtnljwt8XtUk40wa_y9tWGoDo0fFqHrpG9zlqr0xsY8=w16383" alt="Unblocked" width="150" height="150"></button>
+            <button class="choicegamebtn"><img src="https://lh6.googleusercontent.com/L-yBruhgQ8n58toGMs_kqWSAe_7RHbWHGT0WmDTGDoNxhpCJ3A0BYdMLh2hzYqPgv4n2uywZGBqi9LxVxP8qaC8=w16383" alt="Unblocked" width="150" height="150"></button>
             <p class="gameundertext">Home Desk+</p>
         </a>
     </div>
