--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,27 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">🚀 The second update is out! 10 NEW Games added and improvements! 💻 <i>[v0.2]</i></p>
+        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
 
     <div>
-        <h1>release v0.2 - <span style="color: yellow">5/28/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.3 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added a rainbow scrollbar</li>
+            <li>Added Super Mario Wonder</li>
+            <li>Added Fruit Ninja</li>
+            <li>Added Spacebar Clicker</li>
+            <li>Added Subway Surfers</li>
+            <li>Added Crossy Road</li>
+            <li>News Updated</li>
+            <li>Fixed the bug where the elements of the home page stayed when clicking on a top game</li>
+            <li>Added Quick Websites to Floopy Web</li>
+        </ul>
+    </div>
+
+    <div>
+        <h1>release v0.2 - <span style="color: yellow">5/28/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Fixed the bug where the elements collide when launching a game.</li>
             <li>Free Web ➡ Floopy Web</li>
