very very very quick fix (STILL V0.3 THOUGH)

--- a/changelog.html
+++ b/changelog.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-        <h1>release v0.3 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.3 - <span style="color: yellow">5/29/2024</span> - <span style="color: lime">LATEST</span></h1>
         <ul>
             <li>Added a rainbow scrollbar</li>
             <li>Added Super Mario Wonder</li>
