--- a/changelog.html
+++ b/changelog.html
@@ -9,12 +9,26 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
+        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
+    </div>
+    <div>
+        <h1>release v0.4 - <span style="color: yellow">5/30/2024</span> - <span style="color: lime">LATEST</span></h1>
+        <ul>
+            <li>Added Geometry Dash Classic</li>
+            <li>Added Rooftop Snipers</li>
+            <li>Added Crazy Cars</li>
+            <li>Added Vex 8</li>
+            <li>Added Boxing Random</li>
+            <li>Added Wordle Unlimited</li>
+            <li>Added Flight Simulator 3D v2.8</li>
+            <li>Fixed Super Mario Wonder game gap</li>
+            <li>Fixed a bug where an element of the homepage would stay when you clicked Top 5 games</li>
+        </ul>
     </div>
 
     <div>
-        <h1>release v0.3 - <span style="color: yellow">...</span> - <span style="color: lime">LATEST</span></h1>
+        <h1>release v0.3 - <span style="color: yellow">5/29/2024</span> - <span style="color: red">OUTDATED</span></h1>
         <ul>
             <li>Added a rainbow scrollbar</li>
             <li>Added Super Mario Wonder</li>
