--- a/games1.html
+++ b/games1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
+        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
@@ -55,6 +55,55 @@
         </a>
     </div>
 
+    <div class="gamediv" onclick="deleteGameDivs(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/R.759f2c11a1ee489ef4dfe17057d6bc8e?rik=aDmUvnG9po7W1w&pid=ImgRaw&r=0&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Geometry Dash <br>Classic</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.jhbXcHx0Eh1-N5WDjE9VTQHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Rooftop Snipers</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.6QLx6-8zOkh7KT5Km-jvmQHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Crazy Cars</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.4XqpeZFWXeioDa5bWaav0gHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Vex 8</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.l3LrCoPdsfNmGhEdhYUBpAAAAA?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Boxing Random</p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)" style="position: relative; top: 15px;">
+        <a>
+            <button class="choicegamebtn"><img src="https://raw.githubusercontent.com/floopynetworkgamingservice/IMG/master/FlightSim.png" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext" style="font-size: 14px;">Flight Simulator <br>3D v2.8</br></p>
+        </a>
+    </div>
+
+    <div class="gamediv" onclick="deleteGameDivs(event)">
+        <a>
+            <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.YLVOsb_9OPh61gtplXxCaQHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
+            <p class="gameundertext">Wordle Unlimited</p>
+        </a>
+    </div>
+
     <div class="gamediv" onclick="deleteGameDivs(event)">
         <a>
             <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.oltqZOiuVHNLYkttVtvinwHaHa?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
@@ -83,10 +132,10 @@
         </a>
     </div>
 
-    <div class="gamediv" onclick="deleteGameDivs(event)">
+    <div class="gamediv" onclick="deleteGameDivs(event)" style="position: relative; top: 15px;">
         <a>
             <button class="choicegamebtn"><img src="https://th.bing.com/th/id/OIP.5pcmiB4YqA99v2y0afTB5wHaFf?rs=1&pid=ImgDetMain&adlt=strict" alt="Game" width="150" height="150"></button>
-            <p class="gameundertext">Super Mario Wonder</p>
+            <p class="gameundertext" style="font-size: 14px;">Super Mario <br>Wonder</br></p>
         </a>
     </div>
 
