--- a/tv.html
+++ b/tv.html
@@ -7,60 +7,57 @@
 </head>
 <body>
     <div class="updatebar">
-        <p class="updatetext">😜 THIRD UPDATE IS HERE!!! 5 NEW GAMES AND IMPROVEMENTS! 💻 <i>[v0.3]</i></p>
+        <p class="updatetext">🤪 FOURTH UPDATE IS HERE! SEVEN NEW GAMES AND BUG FIXES! 👌 <i>[v0.4]</i></p>
         <a onclick="injectChangelog()"><button class="changelogminibtn">View Changelog</button></a>
     </div>
     <h1 id="top"><span class="floopy">Floopy</span> <span class="network">Network</span></h1>
     <p class="undertop">Welcome to the TV section.</p>
-
+    <h2 class="rainbow-text">TV Apps</h2>
     <center>
-        <a href="https://docs.google.com/presentation/d/1EHj9OoEoyipvT-cpfoVsRW7P6ciYpgm0j5cglnsJhGU/edit#slide=id.g26f18c14fe8_0_0" class="tvchoicebtn">
-            <img src="https://th.bing.com/th/id/R.e0f72b9f2f93c6b8c0493af51841db50?rik=wymcoIQ28gQU0g&pid=ImgRaw&r=0&adlt=strict" alt="YouTube" width="200" height="100">
-        </a>
-        <p class="gameundertext">YouTube</p>
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/149GpUX0v2xNpwbUTv0Ra1bXSBJ8VImN3yQXMYA9ZhKA/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.I9cvYdJTPAHPFgk7z4wj7QHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Netflix" width="200" height="100">
+            </a>
+            <p class="gameundertext">Netflix</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/1YDZCGRJMcIXA6CDnnxEUcNuZuEx-NdUETeeVFulhYDg/edit#slide=id.g2ce541b7098_0_1" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.RniX7sHkEVps_yj4dDicIwHaD4?rs=1&pid=ImgDetMain&adlt=strict" alt="Hulu" width="200" height="100">
+            </a>
+            <p class="gameundertext">Hulu</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/1MKUZLOhfS1PyOtbz-uhfdNqewzDJIqZxBEfMeWPhJpE/edit#slide=id.g2d03a5085ad_0_68" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.rBwDDjtzKYtJ8vIigazKEgHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Tubi" width="200" height="100">
+            </a>
+            <p class="gameundertext">Tubi</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/1cqMoS7rNvOX77938GusdWNi6mYVPOfETCVsAVW9I9ps/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.siflAaBud13nKKn2H-LmJQHaEc?rs=1&pid=ImgDetMain&adlt=strict" alt="Disney+" width="200" height="100">
+            </a>
+            <p class="gameundertext">Disney+</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/1lc9cs9TYLcS3fZNz599myliKaH3_0OjvS5guw3MFZl4/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/OIP.8u3xgkrdRiMd7vxXVH2ITwHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Paramount+" width="200" height="100">
+            </a>
+            <p class="gameundertext">Paramount+</p>
+        </div>
+
+        <div class="gamediv">
+            <a href="https://docs.google.com/presentation/d/1OjrWHYHz5xbxhVYfWbDF4J0NdM3AYHC9x2pTchv4GuU/edit#slide=id.g26f6dcac621_1_0" class="tvchoicebtn" style="background-color: black;">
+                <img src="https://th.bing.com/th/id/R.b7223a7771ca0e7262326b97171cc7a1?rik=JEC44iNqS24mEw&pid=ImgRaw&r=0&adlt=strict" alt="Paramount+" width="200" height="100">
+            </a>
+            <p class="gameundertext">Roku</p>
+        </div>
     </center>
 
-    <center>
-        <a href="https://docs.google.com/presentation/d/149GpUX0v2xNpwbUTv0Ra1bXSBJ8VImN3yQXMYA9ZhKA/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/OIP.I9cvYdJTPAHPFgk7z4wj7QHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Netflix" width="200" height="100">
-        </a>
-        <p class="gameundertext">Netflix</p>
-    </center>
-
-    <center>
-        <a href="https://docs.google.com/presentation/d/1YDZCGRJMcIXA6CDnnxEUcNuZuEx-NdUETeeVFulhYDg/edit#slide=id.g2ce541b7098_0_1" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/OIP.RniX7sHkEVps_yj4dDicIwHaD4?rs=1&pid=ImgDetMain&adlt=strict" alt="Hulu" width="200" height="100">
-        </a>
-        <p class="gameundertext">Hulu</p>
-    </center>
-
-    <center>
-        <a href="https://docs.google.com/presentation/d/1MKUZLOhfS1PyOtbz-uhfdNqewzDJIqZxBEfMeWPhJpE/edit#slide=id.g2d03a5085ad_0_68" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/OIP.rBwDDjtzKYtJ8vIigazKEgHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Tubi" width="200" height="100">
-        </a>
-        <p class="gameundertext">Tubi</p>
-    </center>
-
-    <center>
-        <a href="https://docs.google.com/presentation/d/1cqMoS7rNvOX77938GusdWNi6mYVPOfETCVsAVW9I9ps/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/OIP.siflAaBud13nKKn2H-LmJQHaEc?rs=1&pid=ImgDetMain&adlt=strict" alt="Disney+" width="200" height="100">
-        </a>
-        <p class="gameundertext">Disney+</p>
-    </center>
-
-    <center>
-        <a href="https://docs.google.com/presentation/d/1lc9cs9TYLcS3fZNz599myliKaH3_0OjvS5guw3MFZl4/edit#slide=id.p" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/OIP.8u3xgkrdRiMd7vxXVH2ITwHaEK?rs=1&pid=ImgDetMain&adlt=strict" alt="Paramount+" width="200" height="100">
-        </a>
-        <p class="gameundertext">Paramount+</p>
-    </center>
-
-    <center>
-        <a href="https://docs.google.com/presentation/d/1OjrWHYHz5xbxhVYfWbDF4J0NdM3AYHC9x2pTchv4GuU/edit#slide=id.g26f6dcac621_1_0" class="tvchoicebtn" style="background-color: black;">
-            <img src="https://th.bing.com/th/id/R.b7223a7771ca0e7262326b97171cc7a1?rik=JEC44iNqS24mEw&pid=ImgRaw&r=0&adlt=strict" alt="Paramount+" width="200" height="100">
-        </a>
-        <p class="gameundertext">Roku</p>
-    </center>
+    <h2 class="rainbow-text">TV Shows</h2>
 
 
 
